book-service completed

--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=book-service
+spring.h2.console.enabled=true
+
+spring.h2.console.settings.web-admin-password=sa
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+
+spring.jpa.database=h2
+spring.jpa.hibernate.ddl-auto=create-drop
