--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=book-service
-spring.h2.console.enabled=true
-
-spring.h2.console.settings.web-admin-password=sa
-spring.h2.console.path=/h2-console
-spring.jpa.show-sql=true
 
 spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-admin-password=password
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+
+server.port=0
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+
+
