--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=library-service
+
+spring.jpa.database=h2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-admin-password=password
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+server.port=8090
