library-service feign client add

--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-admin-password=password
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/h2-console-book-service
 spring.jpa.show-sql=true
 
 server.port=0
