--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-admin-password=password
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/h2-console-library-service
 spring.jpa.show-sql=true
-server.port=8090
+
+server.port=8080
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
